crates/ruff_linter/src/rules/flake8_pie/snapshots/ruff_linter__rules__flake8_pie__tests__PIE796_PIE796.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pie/mod.rs
---
PIE796 Enum contains duplicate value: `"B"`
 --> PIE796.py:8:5
  |
8 |     C = "B"  # PIE796
  |     ^^^^^^^
  |

PIE796 Enum contains duplicate value: `2`
  --> PIE796.py:14:5
   |
14 |     C = 2  # PIE796
   |     ^^^^^
   |

PIE796 Enum contains duplicate value: `"2"`
  --> PIE796.py:20:5
   |
20 |     C = "2"  # PIE796
   |     ^^^^^^^
   |

PIE796 Enum contains duplicate value: `2.5`
  --> PIE796.py:26:5
   |
26 |     C = 2.5  # PIE796
   |     ^^^^^^^
   |

PIE796 Enum contains duplicate value: `False`
  --> PIE796.py:33:5
   |
33 |     D = False  # PIE796
   |     ^^^^^^^^^
   |

PIE796 Enum contains duplicate value: `None`
  --> PIE796.py:40:5
   |
40 |     D = None  # PIE796
   |     ^^^^^^^^
   |

PIE796 Enum contains duplicate value: `2`
  --> PIE796.py:54:5
   |
54 |     C = 2  # PIE796
   |     ^^^^^
   |

PIE796 Enum contains duplicate value: `...`
  --> PIE796.py:71:5
   |
71 |     B = ...  # PIE796
   |     ^^^^^^^
   |

PIE796 Enum contains duplicate value: `...`
  --> PIE796.py:72:5
   |
72 |     C = ...  # PIE796
   |     ^^^^^^^
   |

PIE796 Enum contains duplicate value: `cast(SomeType, ...)`
  --> PIE796.py:79:5
   |
79 |     B = cast(SomeType, ...)  # PIE796
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |

PIE796 Enum contains duplicate value: `cast(SomeType, ...)`
  --> PIE796.py:80:5
   |
80 |     C = cast(SomeType, ...)  # PIE796
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
