crates/ruff_linter/src/rules/flake8_pie/snapshots/ruff_linter__rules__flake8_pie__tests__PIE800_PIE800.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pie/mod.rs
---
PIE800 [*] Unnecessary spread `**`
 --> PIE800.py:1:14
  |
1 | {"foo": 1, **{"bar": 1}}  # PIE800
  |              ^^^^^^^^^^
2 |
3 | {**{"bar": 10}, "a": "b"}  # PIE800
  |
help: Remove unnecessary dict
  |
1 - {"foo": 1, **{"bar": 1}}  # PIE800
1 + {"foo": 1, "bar": 1}  # PIE800
  |

PIE800 [*] Unnecessary spread `**`
 --> PIE800.py:3:4
  |
1 | {"foo": 1, **{"bar": 1}}  # PIE800
2 |
3 | {**{"bar": 10}, "a": "b"}  # PIE800
  |    ^^^^^^^^^^^
4 |
5 | foo({**foo, **{"bar": True}})  # PIE800
  |
help: Remove unnecessary dict
  |
3 - {**{"bar": 10}, "a": "b"}  # PIE800
3 + {"bar": 10, "a": "b"}  # PIE800
  |

PIE800 [*] Unnecessary spread `**`
 --> PIE800.py:5:15
  |
3 | {**{"bar": 10}, "a": "b"}  # PIE800
4 |
5 | foo({**foo, **{"bar": True}})  # PIE800
  |               ^^^^^^^^^^^^^
6 |
7 | {**foo, **{"bar": 10}}  # PIE800
  |
help: Remove unnecessary dict
  |
5 - foo({**foo, **{"bar": True}})  # PIE800
5 + foo({**foo, "bar": True})  # PIE800
  |

PIE800 [*] Unnecessary spread `**`
 --> PIE800.py:7:11
  |
5 | foo({**foo, **{"bar": True}})  # PIE800
6 |
7 | {**foo, **{"bar": 10}}  # PIE800
  |           ^^^^^^^^^^^
8 |
9 | { # PIE800
  |
help: Remove unnecessary dict
  |
7 - {**foo, **{"bar": 10}}  # PIE800
7 + {**foo, "bar": 10}  # PIE800
  |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:12:7
   |
10 |       "a": "b",
11 |       # Preserve
12 |       **{
   |  _______^
13 | |         # all
14 | |         "bar": 10,  # the
15 | |         # comments
16 | |     },
   | |_____^
17 |   }
   |
help: Remove unnecessary dict
   |
12 ~     
13 |         # all
14 ~         "bar": 10  # the
15 |         # comments
16 ~     ,
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:19:19
   |
17 | }
18 |
19 | {**foo, **buzz, **{bar: 10}}  # PIE800
   |                   ^^^^^^^^^
20 |
21 | # https://github.com/astral-sh/ruff/issues/15366
   |
help: Remove unnecessary dict
   |
19 - {**foo, **buzz, **{bar: 10}}  # PIE800
19 + {**foo, **buzz, bar: 10}  # PIE800
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:24:8
   |
22 | {
23 |     "data": [],
24 |     **({"count": 1 if include_count else {}}),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 | }
   |
help: Remove unnecessary dict
   |
24 -     **({"count": 1 if include_count else {}}),
24 +     "count": 1 if include_count else {},
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:30:9
   |
28 |       "data": [],
29 |       **(  # Comment
30 | /         {  # Comment
31 | |             "count": 1 if include_count else {}}),
   | |________________________________________________^
32 |   }
   |
help: Remove unnecessary dict
   |
29 ~       # Comment
30 ~           # Comment
31 ~             "count": 1 if include_count else {},
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:37:9
   |
35 |       "data": [],
36 |       **(
37 | /         {
38 | |             "count": (a := 1),}),
   | |_______________________________^
39 |   }
   |
help: Remove unnecessary dict
   |
36 ~     
37 ~         
38 ~             "count": (a := 1),
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:44:9
   |
42 |       "data": [],
43 |       **(
44 | /         {
45 | |             "count": (a := 1)
46 | |             }
   | |_____________^
47 |       )
48 |       ,
   |
help: Remove unnecessary dict
   |
43 ~     
44 ~         
45 |             "count": (a := 1)
46 ~             
47 ~     
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:54:9
   |
52 |       "data": [],
53 |       **(
54 | /         {
55 | |             "count": (a := 1),  # Comment
56 | |             }  # Comment
   | |_____________^
57 |       ) # Comment
58 |       ,
   |
help: Remove unnecessary dict
   |
53 ~     
54 ~         
55 ~             "count": (a := 1)  # Comment
56 ~               # Comment
57 ~      # Comment
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:65:1
   |
63 |       **(  # Comment
64 |           (   # Comment
65 | / { # Comment
66 | |             "count": (a := 1),  # Comment
67 | |         }  # Comment
   | |_________^
68 |               )
69 |       ) # Comment
   |
help: Remove unnecessary dict
   |
63 ~       # Comment
64 ~            # Comment
65 |  # Comment
66 ~             "count": (a := 1)  # Comment
67 ~           # Comment
68 ~             
69 ~      # Comment
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:77:9
   |
75 |       ** # Foo
76 |       (  # Comment
77 | /         { "a": b,
78 | |           # Comment
79 | |           }
   | |___________^
80 |       ) ,
81 |       c: 9,
   |
help: Remove unnecessary dict
   |
75 ~      # Foo
76 ~       # Comment
77 ~          "a": b
78 |           # Comment
79 ~           
80 ~      ,
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:86:13
   |
85 | # https://github.com/astral-sh/ruff/issues/15997
86 | {"a": [], **{},}
   |             ^^
87 | {"a": [], **({}),}
   |
help: Remove unnecessary dict
   |
86 - {"a": [], **{},}
86 + {"a": [], }
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:87:14
   |
85 | # https://github.com/astral-sh/ruff/issues/15997
86 | {"a": [], **{},}
87 | {"a": [], **({}),}
   |              ^^
88 |
89 | {"a": [], **{}, 6: 3}
   |
help: Remove unnecessary dict
   |
87 - {"a": [], **({}),}
87 + {"a": [], }
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:89:13
   |
87 | {"a": [], **({}),}
88 |
89 | {"a": [], **{}, 6: 3}
   |             ^^
90 | {"a": [], **({}), 6: 3}
   |
help: Remove unnecessary dict
   |
89 - {"a": [], **{}, 6: 3}
89 + {"a": [],  6: 3}
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:90:14
   |
89 | {"a": [], **{}, 6: 3}
90 | {"a": [], **({}), 6: 3}
   |              ^^
91 |
92 | {"a": [], **{
   |
help: Remove unnecessary dict
   |
90 - {"a": [], **({}), 6: 3}
90 + {"a": [],  6: 3}
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:92:13
   |
90 |   {"a": [], **({}), 6: 3}
91 |
92 |   {"a": [], **{
   |  _____________^
93 | |     # Comment
94 | | }, 6: 3}
   | |_^
95 |   {"a": [], **({
96 |       # Comment
   |
help: Remove unnecessary dict
   |
92 ~ {"a": [], 
   |

PIE800 [*] Unnecessary spread `**`
  --> PIE800.py:95:14
   |
93 |       # Comment
94 |   }, 6: 3}
95 |   {"a": [], **({
   |  ______________^
96 | |     # Comment
97 | | }), 6: 3}
   | |_^
help: Remove unnecessary dict
   |
95 ~ {"a": [], 
   |
