crates/ruff_linter/src/rules/flake8_pie/snapshots/ruff_linter__rules__flake8_pie__tests__PIE808_PIE808.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pie/mod.rs
---
PIE808 [*] Unnecessary `start` argument in `range`
 --> PIE808.py:2:7
  |
1 | # PIE808
2 | range(0, 10)
  |       ^
3 |
4 | import builtins
  |
help: Remove `start` argument
  |
2 - range(0, 10)
2 + range(10)
  |

PIE808 [*] Unnecessary `start` argument in `range`
 --> PIE808.py:5:16
  |
4 | import builtins
5 | builtins.range(0, 10)
  |                ^
6 |
7 | # OK
  |
help: Remove `start` argument
  |
5 - builtins.range(0, 10)
5 + builtins.range(10)
  |

PIE808 [*] Unnecessary `start` argument in `range`
  --> PIE808.py:19:8
   |
18 | # regression test for https://github.com/astral-sh/ruff/pull/18805
19 | range((0), 42)
   |        ^
help: Remove `start` argument
   |
19 - range((0), 42)
19 + range(42)
   |

PIE808 [*] Unnecessary `start` argument in `range`
  --> PIE808.py:27:7
   |
27 | range(0, 3)
   |       ^
help: Remove `start` argument
   |
27 - range(0, 3)
27 + range(3)
   |
