crates/ruff_linter/src/rules/flake8_pie/snapshots/ruff_linter__rules__flake8_pie__tests__non-unique-enums_PIE796.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pie/mod.rs
---
PIE796 Enum contains duplicate value: `"B"`
 --> PIE796.py:8:5
  |
6 |     A = "A"
7 |     B = "B"
8 |     C = "B"  # PIE796
  |     ^^^^^^^

PIE796 Enum contains duplicate value: `2`
  --> PIE796.py:14:5
   |
12 |     A = 1
13 |     B = 2
14 |     C = 2  # PIE796
   |     ^^^^^

PIE796 Enum contains duplicate value: `"2"`
  --> PIE796.py:20:5
   |
18 |     A = "1"
19 |     B = "2"
20 |     C = "2"  # PIE796
   |     ^^^^^^^

PIE796 Enum contains duplicate value: `2.5`
  --> PIE796.py:26:5
   |
24 |     A = 1.0
25 |     B = 2.5
26 |     C = 2.5  # PIE796
   |     ^^^^^^^

PIE796 Enum contains duplicate value: `False`
  --> PIE796.py:33:5
   |
31 |     B = True
32 |     C = False
33 |     D = False  # PIE796
   |     ^^^^^^^^^

PIE796 Enum contains duplicate value: `None`
  --> PIE796.py:40:5
   |
38 |     B = 2
39 |     C = None
40 |     D = None  # PIE796
   |     ^^^^^^^^

PIE796 Enum contains duplicate value: `2`
  --> PIE796.py:54:5
   |
52 |     A = 1
53 |     B = 2
54 |     C = 2  # PIE796
   |     ^^^^^

PIE796 Enum contains duplicate value: `...`
  --> PIE796.py:71:5
   |
69 | class FakeEnum10(enum.Enum):
70 |     A = ...
71 |     B = ...  # PIE796
   |     ^^^^^^^
72 |     C = ...  # PIE796
   |

PIE796 Enum contains duplicate value: `...`
  --> PIE796.py:72:5
   |
70 |     A = ...
71 |     B = ...  # PIE796
72 |     C = ...  # PIE796
   |     ^^^^^^^

PIE796 Enum contains duplicate value: `cast(SomeType, ...)`
  --> PIE796.py:79:5
   |
77 | class FakeEnum11(enum.Enum):
78 |     A = cast(SomeType, ...)
79 |     B = cast(SomeType, ...)  # PIE796
   |     ^^^^^^^^^^^^^^^^^^^^^^^
80 |     C = cast(SomeType, ...)  # PIE796
   |

PIE796 Enum contains duplicate value: `cast(SomeType, ...)`
  --> PIE796.py:80:5
   |
78 |     A = cast(SomeType, ...)
79 |     B = cast(SomeType, ...)  # PIE796
80 |     C = cast(SomeType, ...)  # PIE796
   |     ^^^^^^^^^^^^^^^^^^^^^^^
